[package]
name = "exec-rs"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
sync = ["flurry", "parking_lot"]

[dependencies.flurry]
version = "0.3.1"
optional = true

[dependencies.parking_lot]
version = "0.11.1"
optional = true