[package]
name = "exec-rs"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Library that provides utility traits for task execution and, if the sync feature is enabled, the ability to synchronise tasks based on the value of a key."
repository = "https://github.com/robinfriedli/exec-rs"
homepage = "https://github.com/robinfriedli/exec-rs"
readme = "README.md"
keywords = ["exec", "task", "sync"]
categories = ["rust-patterns", "concurrency"]

[features]
default = ["sync"]
sync = ["flurry", "parking_lot"]

[dependencies.flurry]
version = "0.3.1"
optional = true

[dependencies.parking_lot]
version = "0.11.1"
optional = true